--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -6,6 +6,7 @@ header {
   position: sticky;
   top: 0;
   padding: 6vw 0 8vw 0;
+  border-bottom: 2px solid $light_grey;
 
   .header_logo {
     width: 30%;
